k8s/test/deployment_v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-deployment
    spec:
      containers:
      - name: pod
        image: nginx:1.11.4-alpine
        ports:
        - containerPort: 80
