k8s/test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
